Add primary key to items sales join table
